--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,7 @@
-/.env
-
-# Ignore all files and folders in the 'volumes' directory
-volumes/*
-
-# Don't ignore 'pg_slave' and 'pg_asyncslave' folders
-!volumes/pg_slave/
-!volumes/pg_asyncslave/
-
-# Ignore everything inside 'pg_slave' and 'pg_asyncslave'
-volumes/pg_slave/*
-volumes/pg_asyncslave/*
-
-# Don't ignore .gitkeep files to ensure directories are kept in the repository
-!volumes/pg_slave/.gitkeep
-!volumes/pg_asyncslave/.gitkeep
-
 # Blazor
-client/obj/
-client/bin/
+client/**/bin/
+client/**/obj/
 
 # .NET
-**/bin/
-**/obj/
+server/**/bin/
+server/**/obj/
