--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
             },
             "env": {
                 "ASPNETCORE_ENVIRONMENT": "Development",
-                "ASPNETCORE_URLS": "http://localhost:80",
+                "ASPNETCORE_URLS": "https://localhost:7140;http://localhost:80",
                 "PRIMARY_DB_HOST": "localhost",
                 "PRIMARY_DB_PORT": "35432",
                 "PRIMARY_DB_NAME": "highloadsocial",
