--- a/server/Core.Api/appsettings.Development.json
+++ b/server/Core.Api/appsettings.Development.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "JwtSettings": {
     "Secret": "this-is-a-very-secure-and-long-key-32-bytes-long",
-    "ExpirationTimeInMinutes": 60000,
+    "ExpirationTimeInMinutes": 5256000,
     "Issuer": "HighloadSocial",
     "Audience": "HighloadSocial"
   },
@@ -16,7 +16,7 @@
     "HostName": "localhost",
     "UserName": "guest",
     "Password": "guest",
-    "QueueName": "my_queue"
+    "QueueName": "core_queue"
   },
   "RedisSettings": {
     "ConnectionString": "localhost:6379"
