--- a/server/Core.Api/appsettings.json
+++ b/server/Core.Api/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "JwtSettings": {
     "Secret": "this-is-a-very-secure-and-long-key-32-bytes-long",
-    "ExpirationTimeInMinutes": 60000,
+    "ExpirationTimeInMinutes": 5256000,
     "Issuer": "HighloadSocial",
     "Audience": "HighloadSocial"
   },
@@ -16,10 +16,11 @@
     "HostName": "rabbitmq",
     "UserName": "guest",
     "Password": "guest",
-    "QueueName": "my_queue"
+    "QueueName": "core_queue"
   },
   "RedisSettings": {
-    "ConnectionString": "redis:6379"
+    "ConnectionString": "redis:6379",
+    "PostFeedTTLInMinutes": 5
   },
   "DatabaseSettings": {
     "ConnectionString": "Host=pg_master;Port=5432;Database=highloadsocial;Username=postgres;Password=postgres;"
